# AE-Cathode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  preprocess.py  test_input_022323.txt  test_input_031723.txt  test_input_052623.txt  test_input_061523.txt  test_input_062223.txt  test_output_022323.txt  test_output_031723.txt  test_output_052623.txt  test_output_061523.txt  test_output_062223.txt
CMake/: FindFastJet.cmake
losses/: deepsetAE_train_val_losses_101723.txt  deepsetAE_train_val_losses_102023.txt  deepset_alpha0.00_train_val_losses_102423.txt  deepset_alpha0.01_train_val_losses_102323.txt  deepset_alpha0.02_train_val_losses_102323.txt  deepset_alpha0.10_train_val_losses_102323.txt  deepset_alpha0.1_train_val_losses_102323.txt  deepset_alpha0.20_train_val_losses_102323.txt  deepset_alpha0.2_train_val_losses_102323.txt  deepset_alpha0.30_train_val_losses_102323.txt  deepset_alpha0.3_train_val_losses_102323.txt  deepset_alpha0.40_train_val_losses_102323.txt  deepset_alpha0.4_train_val_losses_102323.txt  deepset_alpha0.50_train_val_losses_012324.txt  deepset_alpha0.50_train_val_losses_102323.txt  deepset_alpha0.5_train_val_losses_102323.txt  deepset_alpha0.65_train_val_losses_012324.txt  deepset_alpha0.70_train_val_losses_102423.txt  deepset_alpha0.70_train_val_losses_102523.txt  deepset_alpha0.75_train_val_losses_012324.txt  deepset_alpha0.75_train_val_losses_012524.txt  deepset_alpha0.75_train_val_losses_013024.txt  deepset_alpha0.80_train_val_losses_012324.txt  deepset_alpha0.80_train_val_losses_013024.txt  deepset_alpha0.80_train_val_losses_020124.txt  deepset_alpha0.80_train_val_losses_021324.txt  deepset_alpha0.80_train_val_losses_021524.txt  deepset_alpha0.80_train_val_losses_102423.txt  deepset_alpha0.90_train_val_losses_011924.txt  deepset_alpha0.90_train_val_losses_011924_2.txt  deepset_alpha0.90_train_val_losses_012324.txt  deepset_alpha0.90_train_val_losses_021524.txt  deepset_alpha0.90_train_val_losses_102423.txt  deepset_alpha0.90_train_val_losses_102623.txt  test_input_012523.txt  test_output_012523.txt  train_val_losses_012523.txt  train_val_losses_012924_chamfer.txt  train_val_losses_022323.txt  train_val_losses_031723.txt  (+12 more)
src/: AE_Karla.ipynb  AE_Karla_complete.ipynb  CMakeLists.txt  ae.py  check.cc  deepset_ae.py  main.cc  plot_events.cc  plotter.py  reformat.py  rotate_events.cc  same_length.cc
